[gd_scene load_steps=5 format=3 uid="uid://dfm0x8errofts"]

[ext_resource type="Script" path="res://levels/Main.gd" id="1_js0qf"]
[ext_resource type="Script" path="res://TimeCounter.gd" id="2_1532q"]
[ext_resource type="PackedScene" uid="uid://d2324syunmnas" path="res://levels/main_menu_scene.tscn" id="4_1puv6"]
[ext_resource type="Script" path="res://MainMenuScript.gd" id="4_3581c"]

[node name="Main" type="Node"]
script = ExtResource("1_js0qf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Transition" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeInOutTransition" type="ColorRect" parent="CanvasLayer/Transition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimerLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("2_1532q")

[node name="BallWhereAbouts" type="Control" parent="CanvasLayer/Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenu" type="CanvasLayer" parent="."]
script = ExtResource("4_3581c")

[node name="Control" type="Control" parent="MainMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 124.0
offset_right = 178.0
offset_bottom = 174.0
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="CreditsButton" type="Button" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 80.0
offset_top = 260.0
offset_right = 208.0
offset_bottom = 310.0
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "CREDITS"

[node name="QuitButton" type="Button" parent="MainMenu/Control"]
layout_mode = 0
offset_left = 78.0
offset_top = 402.0
offset_right = 176.0
offset_bottom = 452.0
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="World" type="Node" parent="."]

[node name="MainMenuScene" parent="World" instance=ExtResource("4_1puv6")]

[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="pressed" from="MainMenu/Control/StartButton" to="MainMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/Control/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
